# monopoly

./: .gitignore  PROMPTS.md  monopoly_handoff.md  play.py  pyproject.toml  simulate.py
data/: board.yaml  chance.yaml  community_chest.yaml
monopoly/: engine.py  loader.py  movement_sim.py  players.py  renderer.py  ruleset.py  runner.py  state.py  types.py
tests/: test_edge_cases.py
